added required html for sidebar

--- a/resources/index.html
+++ b/resources/index.html
@@ -7,13 +7,63 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="layout.css">
 </head>
-
 <body>
+	
+    <!-- SIDE BAR -->
+    <button id="sidebar-toggle" class="sidebar-toggle-button">
+        <img src="assets/menu.png" alt="Menu">
+    </button>
+
+    <div id="mySidenav" class="sidenav collapsed">
+        <div class="dropdown">
+            <button class="dropdown-button">Play Slot Machine</button>
+            <div class="dropdown-container">
+                <button>Placeholder</button>
+                <button>Placeholder</button>
+            </div>
+        </div>
+
+        <div class="dropdown">
+            <button class="dropdown-button">Placeholder</button>
+            <div class="dropdown-container">
+                <button class="focus-button">Placeholder</button>
+                <button>Placeholder</button>
+                <button>Placeholder</button>
+            </div>
+        </div>
+
+        <div class="dropdown">
+            <button class="dropdown-button">Placeholder</button>
+            <div class="dropdown-container">
+                <button>Placeholder</button>
+                <button>Placeholder</button>
+                <button>Placeholder</button>
+                <button>Placeholder</button>
+            </div>
+        </div>
+
+        <div class="dropdown">
+            <button class="dropdown-button">Placeholder</button>
+            <div class="dropdown-container">
+                <button>Placeholder</button>
+                <button>Placeholder</button>
+                <button>Placeholder</button>
+                <button>Placeholder</button>
+            </div>
+        </div>
+
+    </div>
+    <!-- SIDE BAR END -->
+
+    <div id="main" style="margin-left: 60px">
+        <p>Hello world</p>
+    </div>
 
 	<script src="js/neutralino.js"></script>
-	<script src="main.js"></script>
+	<script type="module" src="main.js"></script>
+	<script src="exitWindow.js"></script>
 </body>
 
 </html>
